# peat-lite

./: .gitignore  .goa  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  SKILL.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-maven.yml  release.yml
android/: build.gradle.kts  consumer-rules.pro  gradlew  proguard-rules.pro  settings.gradle.kts
android-ffi/: Cargo.toml
android-ffi/.cargo/: config.toml
android-ffi/src/: lib.rs  uniffi-bindgen.rs
android/src/main/: AndroidManifest.xml
android/src/main/java/uniffi/hive_lite_android/: hive_lite_android.kt
android/src/main/java/uniffi/peat_lite_android/: peat_lite_android.kt
eche-lite-protocol/: Cargo.toml  README.md
eche-lite-protocol/src/: constants.rs  crdt_type.rs  header.rs  lib.rs  message_type.rs  ota.rs  ttl.rs
eche-lite-protocol/tests/: ttl_wire_integration.rs
firmware/: Cargo.toml  Makefile  README.md  build.rs  partitions_ota.csv
firmware/.cargo/: config.toml
firmware/src/: lib.rs  main.rs  ota.rs  wifi_main.rs
firmware/src/crdt/: g_counter.rs  lww_register.rs  mod.rs  pn_counter.rs
firmware/src/protocol/: capabilities.rs  message.rs  mod.rs  peer.rs  state.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_canned_message_ack_decode/: seed_base_only  seed_with_acks
fuzz/corpus/fuzz_canned_message_event_decode/: seed_bad_marker  seed_checkin_broadcast  seed_short
fuzz/corpus/fuzz_canned_message_signed_decode/: seed_signed
fuzz/corpus/fuzz_decode_header/: seed_announce  seed_bad_magic
fuzz/corpus/fuzz_gcounter_decode/: seed_two_nodes
fuzz/fuzz_targets/: fuzz_canned_message_ack_decode.rs  fuzz_canned_message_event_decode.rs  fuzz_canned_message_signed_decode.rs  fuzz_decode_header.rs  fuzz_gcounter_decode.rs
hive-lite-protocol/: Cargo.toml  README.md
hive-lite-protocol/src/: capabilities.rs  constants.rs  error.rs  header.rs  lib.rs  message_type.rs  ota.rs
src/: canned.rs  counter.rs  lib.rs  lww.rs  node_id.rs  wire.rs
src/protocol/: capabilities.rs  constants.rs  document.rs  error.rs  header.rs  message_type.rs  mod.rs  ota.rs  ttl.rs
tests/: wire_edge_cases.rs
