[package]
name = "hive-lite"
version = "0.0.4"
edition = "2021"
authors = ["(r)evolve - Revolve Team LLC"]
license = "Apache-2.0"
description = "Lightweight CRDT primitives for resource-constrained HIVE nodes"
repository = "https://app.radicle.xyz/nodes/seed.toph.so/rad:z4Bhrn1aB8T5vp6Vg42xxvAXx5TJx"
homepage = "https://app.radicle.xyz/nodes/seed.toph.so/rad:z4Bhrn1aB8T5vp6Vg42xxvAXx5TJx"
keywords = ["crdt", "embedded", "mesh", "hive", "tactical"]
categories = ["no-std", "data-structures", "embedded"]
readme = "README.md"
exclude = ["android/", "android-ffi/", "Makefile"]

[lib]
# rlib for Rust consumers (default)
# cdylib added via android feature for native library
crate-type = ["rlib"]

[features]
default = ["std"]
std = []
# no_std by disabling default features: --no-default-features

[dependencies]
# Minimal dependencies for no_std compatibility
# heapless provides fixed-capacity collections
heapless = "0.8"

[dev-dependencies]
# Only used for testing, not in library
