[workspace]
resolver = "2"
members = [
    ".",
]
# Firmware requires ESP32 toolchain — build separately
exclude = ["firmware", "android/", "android-ffi/"]

[package]
name = "peat-lite"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Kit Plummer <kitplummer@defenseunicorns.com>"]
license = "Apache-2.0"
description = "Lightweight CRDT primitives for resource-constrained Peat nodes"
repository = "https://github.com/defenseunicorns/peat-lite"
homepage = "https://github.com/defenseunicorns/peat-lite"
keywords = ["crdt", "embedded", "mesh", "peat", "tactical"]
categories = ["no-std", "data-structures", "embedded"]
readme = "README.md"
exclude = ["android/", "android-ffi/", "firmware/", "Makefile", ".goa", ".github/"]

[lib]
# rlib for Rust consumers (default)
# cdylib added via android feature for native library
crate-type = ["rlib"]

[features]
default = ["std"]
std = []
# no_std by disabling default features: --no-default-features

[dependencies]
# Minimal dependencies for no_std compatibility
# heapless provides fixed-capacity collections
heapless = "0.8"

[dev-dependencies]
# Only used for testing, not in library
