# Android FFI crate — member of the peat-lite workspace.
# Build via `cargo build -p peat-lite-android` from the repo root.

[package]
name = "peat-lite-android"
version = "0.0.3"
edition = "2021"
authors = ["Defense Unicorns"]
license = "Apache-2.0"
description = "Android/Kotlin bindings for peat-lite via UniFFI"
publish = false

[lib]
crate-type = ["cdylib"]
name = "peat_lite_android"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[dependencies]
peat-lite = { path = "..", features = ["std"] }
uniffi = { version = "0.28", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
