[package]
name = "hive-lite-protocol"
version = "0.1.0"
edition = "2021"
authors = ["(r)evolve Inc."]
description = "HIVE-Lite wire protocol: constants, message types, and header codec (no_std, zero-dependency)"
license = "Apache-2.0"
repository = "https://app.radicle.xyz/nodes/rosa.radicle.xyz/rad:z4Bhrn1aB8T5vp6Vg42xxvAXx5TJx"
readme = "README.md"
categories = ["embedded", "no-std", "network-programming"]
keywords = ["hive", "mesh", "protocol", "no_std"]
